--- a/index.html
+++ b/index.html
@@ -2,11 +2,120 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cartas aleatorias</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.1/nouislider.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.1/nouislider.min.js"></script>
+
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
+    <div>
+      <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary shadow">
+        <div class="container-fluid">
+          <a class="navbar-brand">
+            <i class="logo fa-solid fa-heart fa-beat fa-lg"></i>
+            Generator Cards
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Time
+                </a>
+
+                <ul class="dropdown-menu" id="timeOptions">
+                  <li><a class="dropdown-item" data-time="3">3s</a></li>
+                  <li><a class="dropdown-item" data-time="5">5s</a></li>
+                  <li><a class="dropdown-item" data-time="10">10s</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Colors Background
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <button
+                      class="dropdown-item color-button"
+                      data-color="white"
+                    >
+                      White
+                    </button>
+                  </li>
+                  <li>
+                    <button
+                      class="dropdown-item color-button"
+                      data-color="darkblue"
+                    >
+                      Blue
+                    </button>
+                  </li>
+                  <li>
+                    <button
+                      class="dropdown-item color-button"
+                      data-color="green"
+                    >
+                      Green
+                    </button>
+                  </li>
+                  <li>
+                    <button
+                      class="dropdown-item color-button"
+                      data-color="grey"
+                    >
+                      Grey
+                    </button>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/6750d8d334.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
